tests/success/return/main.adept3

pragma => adept("3.0")

func main int {
    return 123
}

