tests/error/using_trait_on_trait_func/main.adept3

pragma => adept(c"3.0")

trait Speak<$T> {
    func speak(self $T) void
}

trait InvalidTrait<$T> {
    #[using Speak<$T>]
    func invalidFunction(self $T) void
}

func main {}

